--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-camera": "^3.19.0"
+    "react-native-camera": "^3.19.0",
+    "react-native-swiper": "^1.6.0-nightly"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
