--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-brands-svg-icons": "^5.12.1",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-native-fontawesome": "^0.2.3",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-camera": "^3.19.0",
+    "react-native-svg": "^12.0.3",
     "react-native-swiper": "^1.6.0-nightly"
   },
   "devDependencies": {
