--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -180,6 +180,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-fs')
     implementation project(':react-native-svg')
     implementation project(':react-native-camera')
     implementation fileTree(dir: "libs", include: ["*.jar"])
