--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,6 +38,8 @@ target 'seetymood' do
 
   pod 'RNSVG', :path => '../node_modules/react-native-svg'
 
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
+
   target 'seetymoodTests' do
     inherit! :search_paths
     # Pods for testing
