--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-camera": "^3.19.0",
+    "react-native-fs": "^2.16.6",
     "react-native-svg": "^12.0.3",
     "react-native-swiper": "^1.6.0-nightly"
   },
