--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.61.5",
     "react-native-camera": "^3.19.0",
     "react-native-fs": "^2.16.6",
+    "react-native-geolocation": "^1.0.0",
     "react-native-geolocation-service": "^4.0.0",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-reanimated": "^1.7.0",
